k8s-yml/Chapter4/4.4.1 pod-hostport.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  containers:
  - name: webapp
    image: tomcat
    ports:
    - containerPort: 8080
      hostPort: 8081


#  k create -f '4.4.1 pod-hostport.yaml'
#  ping vmb (ip: 192.168.13.131)
#  curl 192.168.13.131:8081

#  k delete -f '4.4.1 pod-hostport.yaml'
