k8s-yml/Chapter4/4.2 webapp-svc.yaml
# 用 kubectl api-resources | grep Service 查看可用的版本
# 是对 4.2 webapp-rc-service.yaml 的拆分

---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
  - port: 8081
    targetPort: 8080
  selector:
    app: webapp

#  k delete service/webapp
#  k create -f  '4.2 webapp-svc.yaml'
#  k get svc
#  curl 10.104.171.71:8081

#  k delete -f  '4.2 webapp-svc.yaml'
