k8s-yml/Chapter4/4.6.1 ingress-new.yaml
# 参考： https://kubernetes.github.io/ingress-nginx/deploy/#online-testing
#    yaml 文件： https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/cloud/deploy.yaml
# 换镜像参考： https://blog.csdn.net/weixin_43988498/article/details/122792536
#    改成 hub 镜像，参考： https://hub.docker.com/u/anjia0532
# 参考配置外部 IP (在 service 配置)： https://kubernetes.github.io/ingress-nginx/deploy/baremetal/

apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  name: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.2.0
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  externalTrafficPolicy: Local
  externalIPs:
    - 192.168.13.131
    - 192.168.13.129
  ports:
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: http
    - appProtocol: https
      name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.2.0
  name: ingress-nginx-controller-admission
  namespace: ingress-nginx
spec:
  ports:
    - appProtocol: https
      name: https-webhook
      port: 443
      targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.2.0
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/name: ingress-nginx
    spec:
      containers:
        - args:
            - /nginx-ingress-controller
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
            - --election-id=ingress-controller-leader
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=nginx
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
          image: anjia0532/google-containers.ingress-nginx.controller:v1.2.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: controller
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 8443
              name: webhook
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            runAsUser: 101
          volumeMounts:
            - mountPath: /usr/local/certificates/
              name: webhook-cert
              readOnly: true
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-nginx-admission
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.2.0
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.2.0
  name: ingress-nginx-admission
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: ingress-nginx-controller-admission
        namespace: ingress-nginx
        path: /networking/v1/ingresses
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate.nginx.ingress.kubernetes.io
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    sideEffects: None

---

# kubectl apply -f '4.6.1 ingress-new.yaml'
#   如果是 delete 之后，第二次创建，要等个一分钟，可能还有没删除干净的

# kubectl get --namespace=ingress-nginx all
#   kubectl get -n ingress-nginx all
# kubectl get --namespace=ingress-nginx pods
#   kubectl get -n ingress-nginx pods
#   kubectl -n ingress-nginx -o wide get pods
#   k describe pod --namespace=ingress-nginx ingress-nginx-admission-patch-9m2rd
# kubectl get --namespace=ingress-nginx services
# kubectl get --namespace=ingress-nginx jobs
# kubectl get --namespace=ingress-nginx serviceAccount
# kubectl get --namespace=ingress-nginx roles
# kubectl get --namespace=ingress-nginx validatingWebhookConfiguration
# kubectl get --namespace=ingress-nginx ingressClass
# kubectl get --namespace=ingress-nginx deployment
# kubectl get --namespace=ingress-nginx clusterRole
# kubectl get --namespace=ingress-nginx roleBinding
# kubectl get --namespace=ingress-nginx clusterRoleBinding
# kubectl get --namespace=ingress-nginx configMap

# 测试
#    kubectl create deployment demo --image=httpd --port=80
#    kubectl expose deployment demo
#    kubectl create ingress demo-localhost --class=nginx --rule="demo.localdev.me/*=demo:80"
#    kubectl port-forward --namespace=ingress-nginx service/ingress-nginx-controller 8080:80
#    kubectl get ingress
#        kubectl get ingress -o wide
# 访问
#    curl --resolve demo.localdev.me:192.168.13.129 http://demo.localdev.me:8080 // 能访问 demo，可理解
#    curl --resolve demo.localdev.me:80:192.168.13.131 http://demo.localdev.me:8080 // 能访问 demo，不可理解
#    curl --resolve demo.localdev.me:80:192.168.13.131 http://demo.localdev.me   // 能访问 demo，可理解
#    curl --resolve demo.localdev.me:192.168.13.131 http://demo.localdev.me      // 不能访问 demo，可理解
#    curl --resolve demo.localdev.me:80:127.0.0.1 http://demo.localdev.me:8080   // 能访问 demo，可理解
#    curl --resolve demo.localdev.me:127.0.0.1 http://demo.localdev.me:8080      // 能访问 demo，可理解
#    curl -H "Host:demo.localdev.me" http://127.0.0.1:8080                       // 能访问 demo，可理解
#    curl -H "Host:demo.localdev.me" 192.168.13.131                              // 能访问 demo，可理解
#    curl -H "Host:demo.localdev.me" 192.168.13.129                              // 能访问 demo，可理解
#    curl 192.168.13.131 // 能访问 nginx，不能访问 demo，可理解
#    curl 192.168.13.129 // 能访问 nginx，不能访问 demo，可理解


# 删除
#    k delete -f '4.6.1 ingress-new.yaml'
